--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,3 +11,16 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
+<style>
+  body {
+    background: #060e1b;
+    overflow: hidden;
+  }
+
+  #star-background {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+  }
+</style>
