⚡feat : notify users in room
- 방 안에 있는 사람들에게 새로 접속한 회원 알려주기
- 방 이름 설정 가능하게 하기

--- a/backend-room-server/public/index.html
+++ b/backend-room-server/public/index.html
@@ -15,6 +15,15 @@
   <div>room name</div>
   <div id="roomName" style="color: blue;"></div>
 
+  <div>
+    <input id="createRoomInput">
+    <button id="createRoomBtn">방 생성하기</button>
+  </div>
+  <div>
+    <input id="joinRoomInput">
+    <button id="joinRoomBtn">방 입장하기</button>
+  </div>
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="js/client.js"></script>
 </body>
