⚡feat : Show list of rooms
- 방의 목록을 서버로부터 받을 수 있음
- rooms를 서버에서 클라이언트에게 전송

--- a/backend-room-server/public/index.html
+++ b/backend-room-server/public/index.html
@@ -24,6 +24,10 @@
     <button id="joinRoomBtn">방 입장하기</button>
   </div>
 
+  <div>
+    <button id="getRoomsBtn">방 목록 보기</button>
+  </div>
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="js/client.js"></script>
 </body>
