--- a/backend-room-server/public/index.html
+++ b/backend-room-server/public/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <title>WebSocket base</title>
-  <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href="/css/index.css" />
 </head>
 
 <body>
