⚡feat : naver & kakao oauth

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,9 +6,8 @@
   <link rel="icon" href="./src/assets/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Catch Prize</title>
-  <script type="text/javascript" src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js"
-    charset="utf-8"></script>
-  <script type="text/javascript" src="https://developers.kakao.com/sdk/js/kakao.min.js" charset="utf-8"></script>
+  <script type="text/javascript" src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js"></script>
+  <script type="text/javascript" src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
 </head>
 
 <body>
