🛠️fix: css 우선순위 변경

--- a/frontend-cli/public/index.html
+++ b/frontend-cli/public/index.html
@@ -4,23 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="./src/assets/favicon.ico"/>
+    <link rel="icon" href="./favicon.ico"/>
     <title>Catch Prize</title>
-    <script type="text/javascript" src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js"></script>
-    <script type="text/javascript" src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
-    <style>
-        body {
-            background: #060d19;
-            overflow: hidden;
-        }
-
-        #star-background {
-            position: fixed;
-            top: 0px;
-            left: 0px;
-            z-index: -1;
-        }
-    </style>
 </head>
 <body>
 <noscript>
